@@ -6,6 +6,7 @@
 * Impr: Search button in GridPanel indicates that records filtering is active
 * Fix: by default, SearchPanel excludes boolean fields for now (until a 3-state checkbox is introduced)
 * Impr: made it possible to create new AR records with assigned associations using double-underscore notation, e.g.: Clerk.new(:boss__last_name => "Aguraijuja ")
+* Impr: specifying an item for Netzke::Window is now optional
 
 = v0.5.5.1 - 2009-11-09
 * Compatibility with latest netzke-core
